# hozz

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  justfile
.github/workflows/: publish.yml
crates/ai/: Cargo.toml
crates/ai/src/: control.rs  engine.rs  lib.rs  model.rs  provider.rs  settings.rs  store.rs  test_support.rs
crates/config/: Cargo.toml
crates/config/src/: app.rs  conf.rs  lib.rs  mihomo.rs  workspace.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  pool.rs  sled.rs
crates/machine/: Cargo.toml
crates/machine/src/: autostart.rs  gpu.rs  lib.rs  net.rs  ops.rs  proxy.rs  sock.rs  ssd.rs
crates/prefs/: Cargo.toml
crates/prefs/src/: hook.rs  lib.rs  meta.rs  registry.rs  state.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  utils.rs
crates/shared/src/app/: alert.rs  docker.rs  mod.rs  nodes.rs  orchestrator.rs  profile.rs  state.rs
crates/shared/src/apps/: ai_tools.rs  app_store.rs  docker.rs  mod.rs  orchestrator.rs  state.rs  tasks.rs
crates/shared/src/apps/alert/: log.rs  mod.rs  types.rs
crates/shared/src/apps/prefs/: manager.rs  mod.rs  store.rs
crates/shared/src/apps/prefs/modules/: ai.rs  containers.rs  gateway.rs  mod.rs  policy.rs  resources.rs  vault.rs
crates/shared/src/apps/prefs/network/: allow_lan.rs  fake_ip.rs  find_process.rs  mod.rs  split_route.rs
crates/shared/src/apps/prefs/system/: autostart.rs  mod.rs  proxy.rs
crates/shared/src/apps/proxy/: core_manager.rs  mod.rs  node.rs  node_manager.rs  profile.rs  profile_manager.rs  profile_store.rs  rule_manager.rs
crates/shared/src/apps/vault/: mod.rs  secret.rs  secret_manager.rs  store.rs  token.rs
crates/shared/src/core/: api.rs  conf.rs  dispatch.rs  manager.rs  mod.rs  rule.rs
crates/shared/src/core/models/: api.rs  conf.rs  mod.rs  rule.rs
crates/shared/src/db/: app.rs  mod.rs  prefs.rs  profile.rs  rule.rs  vault.rs
crates/shared/src/infra/: core.rs  log.rs  mod.rs  secret.rs  tasks.rs
crates/shared/src/infra/storage/: group.rs  mod.rs  prefs.rs  profile.rs  rule.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: init.rs  lib.rs
hozz/: Cargo.toml  Dioxus.toml  build.rs
hozz/assets/: main.css  tailwind.css
hozz/src/: main.rs  route.rs
hozz/src/components/: callout.rs  message.rs  mod.rs  nav.rs
hozz/src/components/button/: action.rs  mod.rs
hozz/src/components/card/: mod.rs  panel.rs
hozz/src/components/control/: bar.rs  mod.rs
hozz/src/components/dropdown/: component.rs  mod.rs  node.rs  profile.rs
hozz/src/components/input/: mod.rs  profile.rs  search.rs  select.rs  switch.rs
hozz/src/components/item/: mod.rs  node.rs  profile.rs  vault.rs
hozz/src/components/label/: metric.rs  mod.rs
hozz/src/components/modal/: details.rs  mod.rs  overlay.rs
hozz/src/components/panel/: mod.rs
hozz/src/components/panel/vault/: breadcrumb.rs  dirs.rs  explorer.rs  mod.rs  quick.rs  session.rs  sign.rs
hozz/src/components/pet/: mod.rs  zero.rs
hozz/src/components/switch/: control.rs  mod.rs  setting.rs
hozz/src/components/toast/: alert.rs  mod.rs
hozz/src/pages/: app.rs  chat.rs  docker.rs  errors.rs  home.rs  loading.rs  mod.rs  proxy.rs  resources.rs  setting.rs  vault.rs
hozz/src/utils/: clipboard.rs  icon.rs  manage.rs  mod.rs  tray.rs
hozz/src/widgets/: docker.rs  mod.rs  rule.rs  system.rs
