[workspace]
members = [
    "hozz",
    "crates/shared",
    "crates/config",
    "crates/machine",
    "crates/telemetry",
    "crates/prefs",
    "crates/db",
]
resolver = "2"

[workspace.package]
version = "1.4.0"
edition = "2024"
authors = ["MR"]
publish = false

[workspace.dependencies]
anyhow = "1.0.103"
async-trait = "0.1"
futures = "0.3"
interprocess = "2.0"
hex = "0.4"
serde_json = "1.0.150"
serde_yaml = "0.9"
sha2 = "0.11"
tracing = "0.1.44"

[workspace.dependencies.reqwest]
version = "0.13.4"
features = ["json", "stream"]

[workspace.dependencies.secrecy]
version = "0.10.3"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.52.3"
features = ["full", "signal"]

[workspace.dependencies.uuid]
version = "1.23.4"
features = ["v4"]


[workspace.lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
too_many_lines = "warn"
unwrap_used = "warn"


[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
