[package]
name = "ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
db = { path = "../db" }
prefs = { path = "../prefs" }
anyhow = { workspace = true }
chrono = { workspace = true }
rkyv = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
