[package]
name = "ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
db = { path = "../db" }
prefs = { path = "../prefs" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rig-core = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
