[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

figment = { version = "0.10.19", features = ["toml", "env", "yaml"] }
machine-uid = "0.6"
directories = "6.0"

[lints]
workspace = true
