[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
figment = { workspace = true }
hex = { workspace = true }
machine-uid = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
