[package]
name = "db"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
config = { path = "../config" }

anyhow = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

sled = "0.34"

[lints]
workspace = true
