[package]
name = "machine"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
config = { path = "../config" }

anyhow = { workspace = true }
interprocess = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
auto-launch = { workspace = true }
nvml-wrapper = { workspace = true }
sysinfo = { workspace = true }
sysproxy = { workspace = true }

[lints]
workspace = true
