[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
config = { path = "../config" }
machine = { path = "../machine" }
prefs = { path = "../prefs" }

anyhow = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

async-trait = "0.1.89"
bollard = "0.21"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
sled = "0.34"
tokio-util = { version = "0.7", features = ["codec"] }
vaultrs = "0.8.0"

[lints]
workspace = true
