[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ai = { path = "../ai" }
config = { path = "../config" }
db = { path = "../db" }
machine = { path = "../machine" }
prefs = { path = "../prefs" }

async-trait = { workspace = true }
anyhow = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
chrono-humanize = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
rig-core = { workspace = true }
rkyv = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
vaultrs = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
