[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
config = { path = "../config" }

anyhow = { workspace = true }
tracing = { workspace = true }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[lints]
workspace = true
