[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
config = { path = "../config" }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[lints]
workspace = true
